--- a/diplomat-lsp/introduction/setup.html
+++ b/diplomat-lsp/introduction/setup.html
@@ -233,12 +233,16 @@
         </a>
         <div class="content-icon-container">
           <div class="view-this-page">
-  <a class="muted-link" href="../_sources/introduction/setup.rst.txt" title="View this page">
+  <a class="muted-link" href="https://github.com/suzizecat/suzizecat.github.io/blob/master/diplomat-lsp-src/source/introduction/setup.rst?plain=true" title="View this page">
     <svg><use href="#svg-eye"></use></svg>
     <span class="visually-hidden">View this page</span>
   </a>
-</div>
-<div class="theme-toggle-container theme-toggle-content">
+</div><div class="edit-this-page">
+  <a class="muted-link" href="https://github.com/suzizecat/suzizecat.github.io/edit/master/diplomat-lsp-src/source/introduction/setup.rst" title="Edit this page">
+    <svg><use href="#svg-pencil"></use></svg>
+    <span class="visually-hidden">Edit this page</span>
+  </a>
+</div><div class="theme-toggle-container theme-toggle-content">
             <button class="theme-toggle">
               <div class="visually-hidden">Toggle Light / Dark / Auto color theme</div>
               <svg class="theme-icon-when-auto-light"><use href="#svg-sun-with-moon"></use></svg>
